src/ui/features/execution/snapshots/terracotta__ui__features__execution__render__tests__ux12r_160x60_apply-progress.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---


























 Terracotta | repo                                                                                                                        workspace: loading...

 ┌Applying────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
 │| Applying...                                                                                                                                               │
 │                                                                                                                                                            │
 │Elapsed 0.0s                                                                                                                                                │
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Ctrl-C cancel | v logs
