src/ui/features/execution/snapshots/terracotta__ui__features__execution__render__tests__ux12r_80x24_apply-stopping.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---








 Terracotta | repo                                        workspace: loading...

 ┌Applying────────────────────────────────────────────────────────────────────┐
 │Stopping... Changes may already be applied.                                 │
 │                                                                            │
 │Elapsed 0.0s                                                                │
 └────────────────────────────────────────────────────────────────────────────┘
 Ctrl-C cancel | v logs
